crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_class_primary_constructor.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class User private constructor(
  val id: String,
  var displayName: String,
)

diagnostics:
(none)
