crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_class_with_init_blocks.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Initialized(value: Int) {
  val doubled: Int

  init {
    doubled = value * 2
  }
}

diagnostics:
(none)
