crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_collection_literal_preview_expressions.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun collectionLiterals(): Any {
  val empty = []
  val numbers = [1, 2, 3]
  val nested = [[1], [2, 3], []]
  return [empty, numbers, nested]
}

diagnostics:
(none)
