crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_collection_literal_preview_vs_indexing.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun collectionLiteralVsIndexing(values: List<List<Int>>): Any {
  val literal = [values[0], values[1]]
  val indexed = literal[0][1]
  return [indexed, values[0]]
}

diagnostics:
(none)
