crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_companion_named_and_delegated.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
interface Provider {
  fun provide(): String
}

class WithCompanion {
  companion object Defaults
    : Provider {
    override fun provide(): String = "default"
  }
}

diagnostics:
(none)
