crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_companion_object.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Factory {
  companion object {
    fun create(): Factory = Factory()
  }
}

diagnostics:
(none)
