crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_constructor_delegates_to_super.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
open class Base(val name: String)

class Child
  : Base {
  constructor(name: String) : super(name)
}

diagnostics:
(none)
