crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_constructor_secondary.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SecondaryConstructor private constructor(val name: String) {
  constructor() : this("default")

  constructor(id: Int) : this(id.toString())
}

diagnostics:
(none)
