crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_constructor_soft_keyword_identifier.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ConstructorProperty(val constructor: Any) {
  init {
    constructor.toString()
  }

  fun reassign() {
    constructor(this)
    val copy = constructor
  }
}

class SecondaryConstructor(val x: Int) {
  constructor() : this(0)

  @Inject
  private constructor(y: Long) : this(y.toInt())
}

diagnostics:
(none)
